--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@nestjs/core": "^10.3.1",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.3.1",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
-    "mongoose": "^8.1.0",
-    "reflect-metadata": "^0.2.1",
+    "mongoose": "^8.1.1",
+    "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "@nestjs/testing": "^10.3.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.11.6",
+    "@types/node": "^20.11.10",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
