--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@nestjs/swagger": "^7.3.1",
     "mongoose": "^8.4.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
@@ -37,6 +38,7 @@
     "@nestjs/testing": "^10.3.9",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
