--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: bus-ore-backend
+name: bus-orel-backend
 
 on:
   push:
@@ -21,7 +21,8 @@ jobs:
     env:
       MONGODB_HOST: ${{secrets.MONGODB_HOST}} 
       MONGODB_PORT: ${{secrets.MONGODB_PORT}} 
-      PORT: ${{secrets.PORT}} 
+      PORT: ${{secrets.PORT}}
+      
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
