--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     strategy:
       matrix:
@@ -22,7 +22,7 @@ jobs:
       MONGODB_HOST: ${{secrets.MONGODB_HOST}} 
       MONGODB_PORT: ${{secrets.MONGODB_PORT}} 
       PORT: ${{secrets.PORT}}
-      
+
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
