--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.17.0]
+        node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     env:
       MONGODB_HOST: ${{secrets.MONGODB_HOST}} 
@@ -30,5 +30,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Clean npm cache
+      run: npm cache clean --force
     - run: npm ci
     - run: npm run build --if-present
