--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,17 +6,15 @@ name: bus-orel-backend
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [20.17.0]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     env:
       MONGODB_HOST: ${{secrets.MONGODB_HOST}} 
@@ -29,8 +27,5 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: Clean npm cache
-      run: npm cache clean --force
     - run: npm ci
     - run: npm run build --if-present
