--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,11 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Create .env file
+      run: |
+        touch .env
+        echo "MONGODB_HOST=${{secrets.MONGODB_HOST}}" >> .env
+        echo "MONGODB_PORT=${{secrets.MONGODB_PORT}}" >> .env
+        echo "PORT=${{secrets.PORT}}" >> .env
     - run: npm ci
     - run: npm run build --if-present
