--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,6 +36,10 @@ jobs:
         echo "PORT=${{secrets.PORT}}" >> .env
         echo "JWT_KEY=${{secrets.JWT_KEY}}" >> .env
         echo "SITE_HOST=${{secrets.SITE_HOST}}" >> .env
+        echo "AWS_ACCESS_KEY=${{secrets.AWS_ACCESS_KEY}}" >> .env
+        echo "AWS_SECRET_KEY=${{secrets.AWS_SECRET_KEY}}" >> .env
+        echo "AWS_S3_REGION=${{secrets.AWS_S3_REGION}}" >> .env
+        echo "AWS_S3_ENDPOINT=${{secrets.AWS_S3_ENDPOINT}}" >> .env
     - run: npm ci
     - run: npm run build --if-present
     - run: pm2 restart backend
