--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,6 +40,7 @@ jobs:
         echo "AWS_SECRET_KEY=${{secrets.AWS_SECRET_KEY}}" >> .env
         echo "AWS_S3_REGION=${{secrets.AWS_S3_REGION}}" >> .env
         echo "AWS_S3_ENDPOINT=${{secrets.AWS_S3_ENDPOINT}}" >> .env
+        echo "AWS_S3_ENDPOINT=${{secrets.AWS_S3_BUCKET}}" >> .env
     - run: npm ci
     - run: npm run build --if-present
     - run: pm2 restart backend
