--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/core": "^10.4.19",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.1.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.19",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.1.1",
     "mongoose": "^8.16.1",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "sharp": "^0.34.2"
@@ -44,6 +46,7 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^22.16.0",
     "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
