--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "bus-orel-backend",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
-  "author": "",
+  "author": "snwkng",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
