--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,8 @@ jobs:
         echo "MONGODB_PORT=${{secrets.MONGODB_PORT}}" >> .env
         echo "MONGODB_DATABASE_NAME=${{secrets.MONGODB_DATABASE_NAME}}" >> .env
         echo "PORT=${{secrets.PORT}}" >> .env
-        echo "JWT_KEY=${{secrets.JWT_KEY}}" >> .env
+        echo "JWT_SECRET=${{secrets.JWT_SECRET}}" >> .env
+        echo "JWT_EXPIRE_IN=${{secrets.JWT_EXPIRE_IN}}" >> .env
         echo "SITE_HOST=${{secrets.SITE_HOST}}" >> .env
         echo "AWS_ACCESS_KEY=${{secrets.AWS_ACCESS_KEY}}" >> .env
         echo "AWS_SECRET_KEY=${{secrets.AWS_SECRET_KEY}}" >> .env
