--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/platform-express": "^10.4.19",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "mongoose": "^8.16.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
